BasicMIPS/Basic/antlr/BasicParser.py
# Generated from c:\Users\ericj\Documents\ITESM-8\Compiladores\compiler-design\BasicMIPS\Basic\antlr\Basic.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BasicParser ( Parser ):

    grammarFileName = "Basic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "'):'", "'\t'", "':'", "')'", 
                     "'*'", "'/'", "'+'", "'-'", "'if'", "'when'", "'else'", 
                     "'&&'", "'||'", "'!'", "'=='", "'>'", "'<'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MUL", "DIV", 
                      "ADD", "SUB", "IF", "WHEN", "ELSE", "AND", "OR", "NOT", 
                      "EQ", "GT", "LT", "TRUE", "FALSE", "ID", "INT", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_ifstat = 2
    RULE_ifelsestat = 3
    RULE_expr = 4
    RULE_boolExpr = 5

    ruleNames =  [ "prog", "stat", "ifstat", "ifelsestat", "expr", "boolExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    MUL=7
    DIV=8
    ADD=9
    SUB=10
    IF=11
    WHEN=12
    ELSE=13
    AND=14
    OR=15
    NOT=16
    EQ=17
    GT=18
    LT=19
    TRUE=20
    FALSE=21
    ID=22
    INT=23
    NEWLINE=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = BasicParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.stat()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasicParser.T__1) | (1 << BasicParser.IF) | (1 << BasicParser.WHEN) | (1 << BasicParser.ID) | (1 << BasicParser.INT) | (1 << BasicParser.NEWLINE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class ReassignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(BasicParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReassign" ):
                listener.enterReassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReassign" ):
                listener.exitReassign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReassign" ):
                return visitor.visitReassign(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifstat(self):
            return self.getTypedRuleContext(BasicParser.IfstatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class IfelseContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifelsestat(self):
            return self.getTypedRuleContext(BasicParser.IfelsestatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelse" ):
                listener.enterIfelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelse" ):
                listener.exitIfelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelse" ):
                return visitor.visitIfelse(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BasicParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)
        def INT(self):
            return self.getToken(BasicParser.INT, 0)
        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = BasicParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 32
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = BasicParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                self.ifstat()
                pass

            elif la_ == 2:
                localctx = BasicParser.IfelseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.ifelsestat()
                pass

            elif la_ == 3:
                localctx = BasicParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 19
                self.expr(0)
                self.state = 20
                self.match(BasicParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = BasicParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 22
                self.match(BasicParser.ID)
                self.state = 23
                self.match(BasicParser.T__0)
                self.state = 24
                self.match(BasicParser.INT)
                self.state = 25
                self.match(BasicParser.NEWLINE)
                pass

            elif la_ == 5:
                localctx = BasicParser.ReassignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 26
                self.match(BasicParser.ID)
                self.state = 27
                self.match(BasicParser.T__0)
                self.state = 28
                self.expr(0)
                self.state = 29
                self.match(BasicParser.NEWLINE)
                pass

            elif la_ == 6:
                localctx = BasicParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 31
                self.match(BasicParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHEN(self):
            return self.getToken(BasicParser.WHEN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(BasicParser.BoolExprContext,0)


        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def stat(self):
            return self.getTypedRuleContext(BasicParser.StatContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)




    def ifstat(self):

        localctx = BasicParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(BasicParser.WHEN)
            self.state = 35
            self.match(BasicParser.T__1)
            self.state = 36
            self.boolExpr(0)
            self.state = 37
            self.match(BasicParser.T__2)
            self.state = 38
            self.match(BasicParser.NEWLINE)

            self.state = 39
            self.match(BasicParser.T__3)
            self.state = 40
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfelsestatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BasicParser.IF, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(BasicParser.BoolExprContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def ELSE(self):
            return self.getToken(BasicParser.ELSE, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_ifelsestat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelsestat" ):
                listener.enterIfelsestat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelsestat" ):
                listener.exitIfelsestat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelsestat" ):
                return visitor.visitIfelsestat(self)
            else:
                return visitor.visitChildren(self)




    def ifelsestat(self):

        localctx = BasicParser.IfelsestatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifelsestat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(BasicParser.IF)
            self.state = 43
            self.match(BasicParser.T__1)
            self.state = 44
            self.boolExpr(0)
            self.state = 45
            self.match(BasicParser.T__2)
            self.state = 46
            self.match(BasicParser.NEWLINE)

            self.state = 47
            self.match(BasicParser.T__3)
            self.state = 48
            self.stat()
            self.state = 50
            self.match(BasicParser.ELSE)
            self.state = 51
            self.match(BasicParser.T__4)
            self.state = 52
            self.match(BasicParser.NEWLINE)

            self.state = 53
            self.match(BasicParser.T__3)
            self.state = 54
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def DIV(self):
            return self.getToken(BasicParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def ADD(self):
            return self.getToken(BasicParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class SubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def SUB(self):
            return self.getToken(BasicParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub" ):
                return visitor.visitSub(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BasicParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class MulContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def MUL(self):
            return self.getToken(BasicParser.MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul" ):
                return visitor.visitMul(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class INTContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(BasicParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINT" ):
                listener.enterINT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINT" ):
                listener.exitINT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINT" ):
                return visitor.visitINT(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BasicParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BasicParser.INT]:
                localctx = BasicParser.INTContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                self.match(BasicParser.INT)
                pass
            elif token in [BasicParser.ID]:
                localctx = BasicParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(BasicParser.ID)
                pass
            elif token in [BasicParser.T__1]:
                localctx = BasicParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.match(BasicParser.T__1)
                self.state = 60
                self.expr(0)
                self.state = 61
                self.match(BasicParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 77
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = BasicParser.MulContext(self, BasicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 65
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 66
                        self.match(BasicParser.MUL)
                        self.state = 67
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = BasicParser.DivContext(self, BasicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 69
                        self.match(BasicParser.DIV)
                        self.state = 70
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = BasicParser.AddContext(self, BasicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 71
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 72
                        self.match(BasicParser.ADD)
                        self.state = 73
                        self.expr(6)
                        pass

                    elif la_ == 4:
                        localctx = BasicParser.SubContext(self, BasicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 74
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 75
                        self.match(BasicParser.SUB)
                        self.state = 76
                        self.expr(5)
                        pass

             
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicParser.RULE_boolExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(BasicParser.NOT, 0)
        def boolExpr(self):
            return self.getTypedRuleContext(BasicParser.BoolExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class LessThanContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def LT(self):
            return self.getToken(BasicParser.LT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessThan" ):
                listener.enterLessThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessThan" ):
                listener.exitLessThan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThan" ):
                return visitor.visitLessThan(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.BoolExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.BoolExprContext,i)

        def OR(self):
            return self.getToken(BasicParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class GreaterThanContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def GT(self):
            return self.getToken(BasicParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterThan" ):
                listener.enterGreaterThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterThan" ):
                listener.exitGreaterThan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterThan" ):
                return visitor.visitGreaterThan(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.BoolExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.BoolExprContext,i)

        def AND(self):
            return self.getToken(BasicParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(BasicParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(BasicParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class IsEqualContext(BoolExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicParser.BoolExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExprContext,i)

        def EQ(self):
            return self.getToken(BasicParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsEqual" ):
                listener.enterIsEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsEqual" ):
                listener.exitIsEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsEqual" ):
                return visitor.visitIsEqual(self)
            else:
                return visitor.visitChildren(self)


